Changes to Home

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ permalink: /
         <div class="row centered">
             <div class="col-md-4">
                 <i class="fa fa-heart-o"></i>
-                <h4>Handsomely Crafted</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <h4>Guides</h4>
+                <p>Find step-by-step guides to engineering projects, tutorials for software and more!</p>
                 <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
@@ -29,8 +29,11 @@ permalink: /
     </div><! --/container -->
 </div><! --/service -->
 
+<!--
 {% include portfolio.html title="LATEST WORKS" limit=10 %}
+-->
 
+<!--
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-4 col-lg-offset-1">
@@ -56,4 +59,4 @@ permalink: /
         </div>
 
     </div><! --/row -->
-</div><! --/container -->
+<!--</div><! --/container -->
