Updated Links and About Page

--- a/links.html
+++ b/links.html
@@ -1,10 +1,10 @@
 ---
-layout: contact
-title: Contact
-permalink: /contact/
+layout: links
+title: Links
+permalink: /links/
 ---
 
-<div id="contactwrap"></div>
+<div id="linkswrap"></div>
 
 <div class="container mtb">
     <div class="row">
