Updated About Page

--- a/about.html
+++ b/about.html
@@ -6,15 +6,16 @@ permalink: /about/
 
 <div class="container mtb">
     <div class="row">
+
         <div class="col-lg-6">
             <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
         </div>
+      
         <div class="col-lg-6">
-            <h4>Purpose</h4>
-            <p>This site is to... </p>
-            <p>...</p>
-            <p...</p>
-
+            <h4>Hello World!</h4>
+            <p>My name is Erik Xu. I'm currently a 3rd year, electrical engineering major studying at UC San Diego. </p>
+            <p></p>
+            <p></p>
         </div>
-    </div><! --/row -->
-</div><! --/container -->
+    </div><!--/row -->
+</div><!--/container -->
