Updated Links Page

--- a/links.html
+++ b/links.html
@@ -9,43 +9,58 @@ permalink: /links/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
-            <h4>Just Get In Touch!</h4>
-            <div class="hline"></div>
-                <p>{{ site.about }}</p>
-                <form role="form">
-                  <div class="form-group">
-                    <label for="InputName1">Your Name</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1">
-                  </div>
-                  <div class="form-group">
-                    <label for="InputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1">
-                  </div>
-                  <div class="form-group">
-                    <label for="InputSubject1">Subject</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1">
-                  </div>
-                  <div class="form-group">
-                    <label for="message1">Message</label>
-                    <textarea class="form-control" id="message1" rows="3"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-theme">Submit</button>
-                </form>
+
+          <h4>Technology News (Magazine, Blog)</h4>
+          <p>1. http://www.theverge.com/<br></p>
+          <p>2. http://www.wired.com/<br></p>
+          <p>3. http://www.engadget.com/<br></p>
+          <p>4. http://www.gizmodo.com/<br></p>
+          <p>5. http://http://spectrum.ieee.org/<br></p>
+          <p>6. http://www.technologyreview.com/<br></p>
+          <p>7. http://techcrunch.com/<br></p>
+          <p>8. https://news.ycombinator.com/<br></p>
+          
+          <h4>Online Community-based Questions and Answers</h4>
+          <p>1. https://www.quora.com/<br></p>
+          <p>2. http://stackoverflow.com/<br></p>
+          <p>3. https://www.reddit.com/r/technology<br></p>
+
+          <h4>How-To, Step-by-step Instructions, DIY</h4>
+          <p>1. http://www.lifehacker.com/<br></p>
+          <p>2. https://www.adafruit.com/<br></p>
+          <p>3. http://letsmakerobots.com/<br></p>
+          <p>4. http://www.instructables.com/<br></p>
+          <p>5. http://readwrite.com/<br></p>
+
+          <h4>Electronics Parts and Hardware Components Store</h4>
+          <p>1. https://www.sparkfun.com/</p>
+          <p>2. http://www.digikey.com/<br></p>
+          <p>3. http://www.mouser.com/<br></p>
+          <p>4. http://www.pololu.com/<br></p>
+
+          <h4>Online Courses (Free!)</h4>
+          <p>1. https://www.udacity.com/<br></p>
+          <p>2. https://www.coursera.org/<br></p>
+
+          <h4>Computer Science Resources (Interview and Resume Tips)</h4>
+          <p>1. http://codingforinterviews.com/<br></p>
+          <p>2. http://www.careercup.com/<br></p>
+
+          <h4>Programming Practice</h4>
+          <p>1. https://www.hackerrank.com/<br></p>
+          <p>2. http://algolint.com/<br></p>
+          <p>3. http://www.codewars.com/<br></p>
+
+          <h4>Coding References</h4>
+          <p>1. http://www.cplusplus.com/<br></p>
+          <p>2. http://www.learncpp.com/<br></p>
+
+          <h4>Dropbox for your Programs</h4>
+          <p>1. https://github.com/<br></p>
+          <p>2. https://bitbucket.org/<br></p>
+
+
         </div><!--/col-lg-8 -->
 
-        <div class="col-lg-4">
-            <h4>Our Address</h4>
-            <div class="hline"></div>
-                <p>
-                    {% for line in site.address.first.lines %}
-                        {{ line }} <br>
-                    {% endfor %}
-                </p>
-                <p>
-                    Email: {{ site.email }}<br/>
-                    Tel: {{ site.tel }}
-                </p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-        </div>
-    </div><! --/row -->
-</div><! --/container -->
+    </div><!--/row -->
+</div><!--/container -->
