Updated Links Page
- Changed websites to URL format

--- a/links.html
+++ b/links.html
@@ -8,59 +8,98 @@ permalink: /links/
 
 <div class="container mtb">
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-6">
 
-          <h4>Technology News (Magazine, Blog)</h4>
-          <p>1. http://www.theverge.com/<br></p>
-          <p>2. http://www.wired.com/<br></p>
-          <p>3. http://www.engadget.com/<br></p>
-          <p>4. http://www.gizmodo.com/<br></p>
-          <p>5. http://http://spectrum.ieee.org/<br></p>
-          <p>6. http://www.technologyreview.com/<br></p>
-          <p>7. http://techcrunch.com/<br></p>
-          <p>8. https://news.ycombinator.com/<br></p>
+               <h4>Technology News (Magazine, Blog)</h4>
+               <a href="http://www.theverge.com">The Verge</a>
+               <a href="http://www.wired.com/">Wired</a>
+               <a href="http://www.engadget.com/">Engadget/a>
+               <a href="http://www.gizmodo.com/">Gizmodo</a>
+               <a href="http://http://spectrum.ieee.org/">IEEE Spectrum</a>
+               <a href="http://www.technologyreview.com/">Technology Review</a>
+               <a href="http://techcrunch.com/">Techcrunch/a>
+               <a href="https://news.ycombinator.com/">Hacker News</a>
+
+               <p>1. http://www.theverge.com/<br></p>
+               <p>2. http://www.wired.com/<br></p>
+               <p>3. http://www.engadget.com/<br></p>
+               <p>4. http://www.gizmodo.com/<br></p>
+               <p>5. http://http://spectrum.ieee.org/<br></p>
+               <p>6. http://www.technologyreview.com/<br></p>
+               <p>7. http://techcrunch.com/<br></p>
+               <p>8. https://news.ycombinator.com/<br></p>
+
+               <h4>Online Community-based Questions and Answers</h4>
+               <a href="https://www.quora.com/">Quora</a>
+               <a href="http://stackoverflow.com/">Stack Overflow</a>
+               <a href="https://www.reddit.com/r/technology">Reddit/Technology</a>
+
+               <p>1. https://www.quora.com/<br></p>
+               <p>2. http://stackoverflow.com/<br></p>
+               <p>3. https://www.reddit.com/r/technology<br></p>
+
+               <h4>How-To, Step-by-step Instructions, DIY</h4>
+               <a href="http://www.lifehacker.com/">LifeHacker</a>
+               <a href="https://www.adafruit.com/">Adafruit</a>
+               <a href="http://letsmakerobots.com/">Let's Make Robots!</a>
+               <a href="http://www.instructables.com/">Instructables</a>
+               <a href="http://readwrite.com/">ReadWrite</a>
+
+               <p>1. http://www.lifehacker.com/<br></p>
+               <p>2. https://www.adafruit.com/<br></p>
+               <p>3. http://letsmakerobots.com/<br></p>
+               <p>4. http://www.instructables.com/<br></p>
+               <p>5. http://readwrite.com/<br></p>
+
+               <h4>Electronics Parts and Hardware Components Store</h4>
+               <a href="https://www.sparkfun.com/">SparkFun Electronics</a>
+               <a href="hhttp://www.digikey.com/">Digi-Key</a>
+               <a href="http://www.mouser.com/">Mouser Electronics</a>
+               <a href="http://www.pololu.com/">Pololu Robotics and Electronics</a>
+
+               <p>1. https://www.sparkfun.com/</p>
+               <p>2. http://www.digikey.com/<br></p>
+               <p>3. http://www.mouser.com/<br></p>
+               <p>4. http://www.pololu.com/<br></p>
+
+          </div><!--/col-lg-6 -->
           
-          <h4>Online Community-based Questions and Answers</h4>
-          <p>1. https://www.quora.com/<br></p>
-          <p>2. http://stackoverflow.com/<br></p>
-          <p>3. https://www.reddit.com/r/technology<br></p>
+          <div class="col-lg-6">
 
-          <h4>How-To, Step-by-step Instructions, DIY</h4>
-          <p>1. http://www.lifehacker.com/<br></p>
-          <p>2. https://www.adafruit.com/<br></p>
-          <p>3. http://letsmakerobots.com/<br></p>
-          <p>4. http://www.instructables.com/<br></p>
-          <p>5. http://readwrite.com/<br></p>
+               <h4>Online Courses (Free!)</h4>
+               <a href="https://www.udacity.com/">Udacity</a>
+               <a href="https://www.coursera.org/">Coursera</a>
+               <p>1. https://www.udacity.com/<br></p>
+               <p>2. https://www.coursera.org/<br></p>
 
-          <h4>Electronics Parts and Hardware Components Store</h4>
-          <p>1. https://www.sparkfun.com/</p>
-          <p>2. http://www.digikey.com/<br></p>
-          <p>3. http://www.mouser.com/<br></p>
-          <p>4. http://www.pololu.com/<br></p>
+               <h4>Computer Science Resources (Interview and Resume Tips)</h4>
+               <a href="http://codingforinterviews.com/">Coding For Interviews</a>
+               <a href="http://www.careercup.com/">CareerCup</a>
+               <p>1. http://codingforinterviews.com/<br></p>
+               <p>2. http://www.careercup.com/<br></p>
 
-          <h4>Online Courses (Free!)</h4>
-          <p>1. https://www.udacity.com/<br></p>
-          <p>2. https://www.coursera.org/<br></p>
+               <h4>Programming Practice</h4>
+               <a href="https://www.hackerrank.com/">HackerRank</a>
+               <a href="http://algolint.com/">AlgoLint</a>
+               <a href="http://www.codewars.com/">Codewars</a>
+               <p>1. https://www.hackerrank.com/<br></p>
+               <p>2. http://algolint.com/<br></p>
+               <p>3. http://www.codewars.com/<br></p>
 
-          <h4>Computer Science Resources (Interview and Resume Tips)</h4>
-          <p>1. http://codingforinterviews.com/<br></p>
-          <p>2. http://www.careercup.com/<br></p>
+               <h4>Coding References</h4>
+               <a href="http://www.cplusplus.com/">The C++ Resources Network</a>
+               <a href="http://www.learncpp.com/">Learn C++</a>
+               <p>1. http://www.cplusplus.com/<br></p>
+               <p>2. http://www.learncpp.com/<br></p>
 
-          <h4>Programming Practice</h4>
-          <p>1. https://www.hackerrank.com/<br></p>
-          <p>2. http://algolint.com/<br></p>
-          <p>3. http://www.codewars.com/<br></p>
-
-          <h4>Coding References</h4>
-          <p>1. http://www.cplusplus.com/<br></p>
-          <p>2. http://www.learncpp.com/<br></p>
-
-          <h4>Dropbox for your Programs</h4>
-          <p>1. https://github.com/<br></p>
-          <p>2. https://bitbucket.org/<br></p>
+               <h4>Dropbox for your Programs</h4>
+               <a href="https://github.com/">GitHub</a>
+               <a href="https://bitbucket.org/">Bitbucket</a>
+               <p>1. https://github.com/<br></p>
+               <p>2. https://bitbucket.org/<br></p>
 
 
-        </div><!--/col-lg-8 -->
+          </div><!--/col-lg-6 -->
 
     </div><!--/row -->
 </div><!--/container -->
