Update to Links Section
- Testing line break between links

--- a/links.html
+++ b/links.html
@@ -11,14 +11,14 @@ permalink: /links/
         <div class="col-lg-6">
 
                <h4>Technology News (Magazine, Blog)</h4>
-               <a href="http://www.theverge.com">The Verge</a>
-               <a href="http://www.wired.com/">Wired</a>
-               <a href="http://www.engadget.com/">Engadget/a>
-               <a href="http://www.gizmodo.com/">Gizmodo</a>
-               <a href="http://http://spectrum.ieee.org/">IEEE Spectrum</a>
-               <a href="http://www.technologyreview.com/">Technology Review</a>
-               <a href="http://techcrunch.com/">Techcrunch/a>
-               <a href="https://news.ycombinator.com/">Hacker News</a>
+               <a href="http://www.theverge.com">The Verge</a><br>
+               <a href="http://www.wired.com/">Wired</a><br>
+               <a href="http://www.engadget.com/">Engadget</a><br>
+               <a href="http://www.gizmodo.com/">Gizmodo</a><br>
+               <a href="http://http://spectrum.ieee.org/">IEEE Spectrum</a><br>
+               <a href="http://www.technologyreview.com/">Technology Review</a><br>
+               <a href="http://techcrunch.com/">Techcrunch</a><br>
+               <a href="https://news.ycombinator.com/">Hacker News</a><br>
 
                <p>1. http://www.theverge.com/<br></p>
                <p>2. http://www.wired.com/<br></p>
