Updated Links Page
- Line break between links
- Added a short description to each section

--- a/links.html
+++ b/links.html
@@ -10,7 +10,8 @@ permalink: /links/
     <div class="row">
         <div class="col-lg-6">
 
-               <h4>Technology News (Magazine, Blog)</h4>
+               <h4>Technology News</h4>
+               <h1>Read about the latest cutting-edge technologies...</h1>
                <a href="http://www.theverge.com">The Verge</a><br>
                <a href="http://www.wired.com/">Wired</a><br>
                <a href="http://www.engadget.com/">Engadget</a><br>
@@ -20,84 +21,58 @@ permalink: /links/
                <a href="http://techcrunch.com/">Techcrunch</a><br>
                <a href="https://news.ycombinator.com/">Hacker News</a><br>
 
-               <p>1. http://www.theverge.com/<br></p>
-               <p>2. http://www.wired.com/<br></p>
-               <p>3. http://www.engadget.com/<br></p>
-               <p>4. http://www.gizmodo.com/<br></p>
-               <p>5. http://http://spectrum.ieee.org/<br></p>
-               <p>6. http://www.technologyreview.com/<br></p>
-               <p>7. http://techcrunch.com/<br></p>
-               <p>8. https://news.ycombinator.com/<br></p>
-
-               <h4>Online Community-based Questions and Answers</h4>
-               <a href="https://www.quora.com/">Quora</a>
-               <a href="http://stackoverflow.com/">Stack Overflow</a>
-               <a href="https://www.reddit.com/r/technology">Reddit/Technology</a>
-
-               <p>1. https://www.quora.com/<br></p>
-               <p>2. http://stackoverflow.com/<br></p>
-               <p>3. https://www.reddit.com/r/technology<br></p>
+               <h4>Questions and Answers</h4>
+               <h1>Ask and read all the community-based questions and answers you ever wanted to know</h1>
+               <a href="https://www.quora.com/">Quora</a><br>
+               <a href="http://stackoverflow.com/">Stack Overflow</a><br>
+               <a href="https://www.reddit.com/r/technology">Reddit/Technology</a><br>
 
                <h4>How-To, Step-by-step Instructions, DIY</h4>
-               <a href="http://www.lifehacker.com/">LifeHacker</a>
-               <a href="https://www.adafruit.com/">Adafruit</a>
-               <a href="http://letsmakerobots.com/">Let's Make Robots!</a>
-               <a href="http://www.instructables.com/">Instructables</a>
-               <a href="http://readwrite.com/">ReadWrite</a>
-
-               <p>1. http://www.lifehacker.com/<br></p>
-               <p>2. https://www.adafruit.com/<br></p>
-               <p>3. http://letsmakerobots.com/<br></p>
-               <p>4. http://www.instructables.com/<br></p>
-               <p>5. http://readwrite.com/<br></p>
+               <h1>Thinking about starting a project? Look no further!</h1>
+               <a href="http://www.lifehacker.com/">LifeHacker</a><br>
+               <a href="https://www.adafruit.com/">Adafruit</a><br>
+               <a href="http://letsmakerobots.com/">Let's Make Robots!</a><br>
+               <a href="http://www.instructables.com/">Instructables</a><br>
+               <a href="http://readwrite.com/">ReadWrite</a><br>
 
                <h4>Electronics Parts and Hardware Components Store</h4>
-               <a href="https://www.sparkfun.com/">SparkFun Electronics</a>
-               <a href="hhttp://www.digikey.com/">Digi-Key</a>
-               <a href="http://www.mouser.com/">Mouser Electronics</a>
-               <a href="http://www.pololu.com/">Pololu Robotics and Electronics</a>
-
-               <p>1. https://www.sparkfun.com/</p>
-               <p>2. http://www.digikey.com/<br></p>
-               <p>3. http://www.mouser.com/<br></p>
-               <p>4. http://www.pololu.com/<br></p>
+               <h1>Compare prices and shop 'til you drop</h1>
+               <a href="https://www.sparkfun.com/">SparkFun Electronics</a><br>
+               <a href="hhttp://www.digikey.com/">Digi-Key</a><br>
+               <a href="http://www.mouser.com/">Mouser Electronics</a><br>
+               <a href="http://www.pololu.com/">Pololu Robotics and Electronics</a><br>
 
           </div><!--/col-lg-6 -->
           
           <div class="col-lg-6">
 
                <h4>Online Courses (Free!)</h4>
-               <a href="https://www.udacity.com/">Udacity</a>
-               <a href="https://www.coursera.org/">Coursera</a>
-               <p>1. https://www.udacity.com/<br></p>
-               <p>2. https://www.coursera.org/<br></p>
+               <h1>Ever wanted to take a course without paying?</h1>
+               <a href="https://www.udacity.com/">Udacity</a><br>
+               <a href="https://www.coursera.org/">Coursera</a><br>
 
-               <h4>Computer Science Resources (Interview and Resume Tips)</h4>
-               <a href="http://codingforinterviews.com/">Coding For Interviews</a>
-               <a href="http://www.careercup.com/">CareerCup</a>
-               <p>1. http://codingforinterviews.com/<br></p>
-               <p>2. http://www.careercup.com/<br></p>
+               <h4>Computer Science Resources</h4>
+               <h1>Prepare for interviews and refine your resume</h1>
+               <a href="http://codingforinterviews.com/">Coding For Interviews</a><br>
+               <a href="http://www.careercup.com/">CareerCup</a><br>
 
                <h4>Programming Practice</h4>
-               <a href="https://www.hackerrank.com/">HackerRank</a>
-               <a href="http://algolint.com/">AlgoLint</a>
-               <a href="http://www.codewars.com/">Codewars</a>
-               <p>1. https://www.hackerrank.com/<br></p>
-               <p>2. http://algolint.com/<br></p>
-               <p>3. http://www.codewars.com/<br></p>
+               <h1>Preparing for a programming competition next month? Practice away!</h1>
+               <a href="https://www.hackerrank.com/">HackerRank</a><br>
+               <a href="http://algolint.com/">AlgoLint</a><br>
+               <a href="http://www.codewars.com/">Codewars</a><br>
 
                <h4>Coding References</h4>
-               <a href="http://www.cplusplus.com/">The C++ Resources Network</a>
-               <a href="http://www.learncpp.com/">Learn C++</a>
-               <p>1. http://www.cplusplus.com/<br></p>
-               <p>2. http://www.learncpp.com/<br></p>
+               <h1>Documentation to all the functions and libraries you need to know</h1>
+               <a href="http://www.cplusplus.com/">The C++ Resources Network</a><br>
+               <a href="http://www.learncpp.com/">Learn C++</a><br>
 
                <h4>Dropbox for your Programs</h4>
-               <a href="https://github.com/">GitHub</a>
+               <h1>Don't lose all your important code when your computer crashes, backup now</h1>
+               <a href="https://github.com/">GitHub</a><br>
                <a href="https://bitbucket.org/">Bitbucket</a>
-               <p>1. https://github.com/<br></p>
-               <p>2. https://bitbucket.org/<br></p>
 
+               <p>And remember... <a href="https://www.google.com/">Google</a> is your best friend!</p>
 
           </div><!--/col-lg-6 -->
 
