--- a/links.html
+++ b/links.html
@@ -72,7 +72,7 @@ permalink: /links/
                <a href="https://github.com/">GitHub</a><br>
                <a href="https://bitbucket.org/">Bitbucket</a>
 
-               <br><h6><p>And remember...<a href="https://www.google.com/">Google</a> is your best friend!</p></h6>
+               <br><br><h6>And remember...<a href="https://www.google.com/">Google</a> is your best friend!</h6>
 
           </div><!--/col-lg-6 -->
 
