--- a/links.html
+++ b/links.html
@@ -4,77 +4,77 @@ title: Links
 permalink: /links/
 ---
 
-<div id="linkswrap"></div>
+<div id="linkswrap">
+     <div class="container mtb">
+         <div class="row">
+             <div class="col-lg-6">
 
-<div class="container mtb">
-    <div class="row">
-        <div class="col-lg-6">
+                    <h2>Technology News</h2>
+                    <h4>Read about the latest cutting-edge technologies...</h4>
+                    <a href="http://www.theverge.com">The Verge</a><br>
+                    <a href="http://www.wired.com/">Wired</a><br>
+                    <a href="http://www.engadget.com/">Engadget</a><br>
+                    <a href="http://www.gizmodo.com/">Gizmodo</a><br>
+                    <a href="http://http://spectrum.ieee.org/">IEEE Spectrum</a><br>
+                    <a href="http://www.technologyreview.com/">Technology Review</a><br>
+                    <a href="http://techcrunch.com/">Techcrunch</a><br>
+                    <a href="https://news.ycombinator.com/">Hacker News</a><br>
 
-               <h2>Technology News</h2>
-               <h4>Read about the latest cutting-edge technologies...</h4>
-               <a href="http://www.theverge.com">The Verge</a><br>
-               <a href="http://www.wired.com/">Wired</a><br>
-               <a href="http://www.engadget.com/">Engadget</a><br>
-               <a href="http://www.gizmodo.com/">Gizmodo</a><br>
-               <a href="http://http://spectrum.ieee.org/">IEEE Spectrum</a><br>
-               <a href="http://www.technologyreview.com/">Technology Review</a><br>
-               <a href="http://techcrunch.com/">Techcrunch</a><br>
-               <a href="https://news.ycombinator.com/">Hacker News</a><br>
+                    <h2>Questions and Answers</h2>
+                    <h4>Ask and read all the community-based questions and answers you ever wanted to know</h4>
+                    <a href="https://www.quora.com/">Quora</a><br>
+                    <a href="http://stackoverflow.com/">Stack Overflow</a><br>
+                    <a href="https://www.reddit.com/r/technology">Reddit/Technology</a><br>
 
-               <h2>Questions and Answers</h2>
-               <h4>Ask and read all the community-based questions and answers you ever wanted to know</h4>
-               <a href="https://www.quora.com/">Quora</a><br>
-               <a href="http://stackoverflow.com/">Stack Overflow</a><br>
-               <a href="https://www.reddit.com/r/technology">Reddit/Technology</a><br>
+                    <h2>How-To, Step-by-step Instructions, DIY</h2>
+                    <h4>Thinking about starting a project? Look no further!</h4>
+                    <a href="http://www.lifehacker.com/">LifeHacker</a><br>
+                    <a href="https://www.adafruit.com/">Adafruit</a><br>
+                    <a href="http://letsmakerobots.com/">Let's Make Robots!</a><br>
+                    <a href="http://www.instructables.com/">Instructables</a><br>
+                    <a href="http://readwrite.com/">ReadWrite</a><br>
 
-               <h2>How-To, Step-by-step Instructions, DIY</h2>
-               <h4>Thinking about starting a project? Look no further!</h4>
-               <a href="http://www.lifehacker.com/">LifeHacker</a><br>
-               <a href="https://www.adafruit.com/">Adafruit</a><br>
-               <a href="http://letsmakerobots.com/">Let's Make Robots!</a><br>
-               <a href="http://www.instructables.com/">Instructables</a><br>
-               <a href="http://readwrite.com/">ReadWrite</a><br>
+                    <h2>Electronics Parts and Hardware Components Store</h2>
+                    <h4>Compare prices and shop 'til you drop</h4>
+                    <a href="https://www.sparkfun.com/">SparkFun Electronics</a><br>
+                    <a href="hhttp://www.digikey.com/">Digi-Key</a><br>
+                    <a href="http://www.mouser.com/">Mouser Electronics</a><br>
+                    <a href="http://www.pololu.com/">Pololu Robotics and Electronics</a><br>
 
-               <h2>Electronics Parts and Hardware Components Store</h2>
-               <h4>Compare prices and shop 'til you drop</h4>
-               <a href="https://www.sparkfun.com/">SparkFun Electronics</a><br>
-               <a href="hhttp://www.digikey.com/">Digi-Key</a><br>
-               <a href="http://www.mouser.com/">Mouser Electronics</a><br>
-               <a href="http://www.pololu.com/">Pololu Robotics and Electronics</a><br>
+               </div><!--/col-lg-6 -->
+               
+               <div class="col-lg-6">
 
-          </div><!--/col-lg-6 -->
-          
-          <div class="col-lg-6">
+                    <h2>Online Courses (Free!)</h2>
+                    <h4>Ever wanted to take a course without paying?</h4>
+                    <a href="https://www.udacity.com/">Udacity</a><br>
+                    <a href="https://www.coursera.org/">Coursera</a><br>
 
-               <h2>Online Courses (Free!)</h2>
-               <h4>Ever wanted to take a course without paying?</h4>
-               <a href="https://www.udacity.com/">Udacity</a><br>
-               <a href="https://www.coursera.org/">Coursera</a><br>
+                    <h2>Computer Science Resources</h2>
+                    <h4>Prepare for interviews and refine your resume</h4>
+                    <a href="http://codingforinterviews.com/">Coding For Interviews</a><br>
+                    <a href="http://www.careercup.com/">CareerCup</a><br>
 
-               <h2>Computer Science Resources</h2>
-               <h4>Prepare for interviews and refine your resume</h4>
-               <a href="http://codingforinterviews.com/">Coding For Interviews</a><br>
-               <a href="http://www.careercup.com/">CareerCup</a><br>
+                    <h2>Programming Practice</h2>
+                    <h4>Preparing for a programming competition next month? Practice away!</h4>
+                    <a href="https://www.hackerrank.com/">HackerRank</a><br>
+                    <a href="http://algolint.com/">AlgoLint</a><br>
+                    <a href="http://www.codewars.com/">Codewars</a><br>
 
-               <h2>Programming Practice</h2>
-               <h4>Preparing for a programming competition next month? Practice away!</h4>
-               <a href="https://www.hackerrank.com/">HackerRank</a><br>
-               <a href="http://algolint.com/">AlgoLint</a><br>
-               <a href="http://www.codewars.com/">Codewars</a><br>
+                    <h2>Coding References</h2>
+                    <h4>Documentation to all the functions and libraries you need to know</h4>
+                    <a href="http://www.cplusplus.com/">The C++ Resources Network</a><br>
+                    <a href="http://www.learncpp.com/">Learn C++</a><br>
 
-               <h2>Coding References</h2>
-               <h4>Documentation to all the functions and libraries you need to know</h4>
-               <a href="http://www.cplusplus.com/">The C++ Resources Network</a><br>
-               <a href="http://www.learncpp.com/">Learn C++</a><br>
+                    <h2>Dropbox for your Programs</h2>
+                    <h4>Don't lose all your important code when your computer crashes, backup now</h4>
+                    <a href="https://github.com/">GitHub</a><br>
+                    <a href="https://bitbucket.org/">Bitbucket</a>
 
-               <h2>Dropbox for your Programs</h2>
-               <h4>Don't lose all your important code when your computer crashes, backup now</h4>
-               <a href="https://github.com/">GitHub</a><br>
-               <a href="https://bitbucket.org/">Bitbucket</a>
+                    <br><br><h5>And remember...<a href="https://www.google.com/">Google</a> is your best friend!</h5>
 
-               <br><br><h5>And remember...<a href="https://www.google.com/">Google</a> is your best friend!</h5>
+               </div><!--/col-lg-6 -->
 
-          </div><!--/col-lg-6 -->
-
-    </div><!--/row -->
-</div><!--/container -->
+         </div><!--/row -->
+     </div><!--/container -->
+</div><!--linkswrap-->
