About and Links Test

--- a/links.html
+++ b/links.html
@@ -13,7 +13,7 @@ permalink: /links/
 
                <h2>Technology News</h2>
                <h4>Read about the latest cutting-edge technologies...</h4>
-               <br><a href="http://www.theverge.com">The Verge</a><br>
+               <br><br><a href="http://www.theverge.com">The Verge</a><br>
                <a href="http://www.wired.com/">Wired</a><br>
                <a href="http://www.engadget.com/">Engadget</a><br>
                <a href="http://www.gizmodo.com/">Gizmodo</a><br>
