--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Home
 permalink: /
 ---
 
+<div id="indexwrap"></div>
+
 <div id="service">
     <div class="container">
         <div class="row centered">
