style.css update test

--- a/about.html
+++ b/about.html
@@ -14,15 +14,15 @@ permalink: /about/
         <div class="col-lg-6">
             <h4>Hello World!</h4>
 
-            <p><font size="12">My name is Erik Xu. I'm currently a 3rd year, electrical engineering major studying at UC San Diego.</font></p>
+            <p>My name is Erik Xu. I'm currently a 3rd year, electrical engineering major studying at UC San Diego.</p>
 
-            <p><font size="12">My career as a computer enthusiast began when I was 10 years old, the age when my family first bought a computer. Coming from a low-income household, I treasured this magical device. Despite it only having 256 MB of RAM and programs taking 10 minutes to load, I was exposed to the world of Internet and the vast wealth of information out there.</font></p>
+            <p>My career as a computer enthusiast began when I was 10 years old, the age when my family first bought a computer. Coming from a low-income household, I treasured this magical device. Despite it only having 256 MB of RAM and programs taking 10 minutes to load, I was exposed to the world of Internet and the vast wealth of information out there.</p>
 
-            <p><font size="12">Throughout my years in junior high and high school, I was the go-to-guy for assistance with computer software and hardware problems. Ranging from my family and relatives to my friends, I was person who helped troubleshoot their issues free of charge.</font></p>
+            <p>Throughout my years in junior high and high school, I was the go-to-guy for assistance with computer software and hardware problems. Ranging from my family and relatives to my friends, I was person who helped troubleshoot their issues free of charge.</p>
 
-            <p><font size="12">Enough of my personal history and let me tell you a bit of the purpose of this site. As the first person in my family to go to college, I want to share my experiences and help those who are also the first to attend college. And even if you aren’t the first, I hope that my experience and advice can give you insight towards what you want to do in the future.</font></p>
+            <p>Enough of my personal history and let me tell you a bit of the purpose of this site. As the first person in my family to go to college, I want to share my experiences and help those who are also the first to attend college. And even if you aren’t the first, I hope that my experience and advice can give you insight towards what you want to do in the future.</p>
 
-            <p><font size="12">Although this website will most likely be centered on electrical engineering and computer science, useful links to websites that are rich in content and pieces of work created by me will be posted to help you get started and move along in your career.</font></p>
+            <p>Although this website will most likely be centered on electrical engineering and computer science, useful links to websites that are rich in content and pieces of work created by me will be posted to help you get started and move along in your career.</p>
 
 
             <p></p>
