--- a/about.html
+++ b/about.html
@@ -24,6 +24,8 @@ permalink: /about/
 
             <p>Although this website will most likely be centered on electrical engineering and computer science, useful links to websites that are rich in content and pieces of work created by me will be posted to help you get started and move along in your career.</p>
 
+            <p>For any information, please contact me by email at: <a href="mailto:dixu@ucsd.edu">dixu@ucsd.edu</a></p>
+            <a href="http://xueyj.github.io/resume.pdf">My Resume</a>
 
             <p></p>
             <p></p>
