Updated Index and Header

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@ permalink: /
         
             <div class="col-md-4">
                 <i class="fa fa-heart-o"></i>
-                <h4>Guides</h4>
+                <h4>Step-by-step Guides</h4>
                 <p>Find step-by-step guides to engineering projects, tutorials for software and more!</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <p><br/><a href="http://xueyj.github.io/engmentor101/category/#guides" class="btn btn-theme">More Info</a></p>
             </div>
 
             <div class="col-md-4">
                 <i class="fa fa-flask"></i>
-                <h4>Retina Ready</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <h4>Article Reviews</h4>
+                <p></p>
+                <p><br/><a href="http://xueyj.github.io/engmentor101/category/#reviews" class="btn btn-theme">More Info</a></p>
             </div>
 
             <div class="col-md-4">
                 <i class="fa fa-trophy"></i>
-                <h4>Quality Theme</h4>
+                <h4>Career Tips</h4>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <p><br/><a href="http://xueyj.github.io/engmentor101/category/#career" class="btn btn-theme">More Info</a></p>
             </div>		 				
 
         </div>
