--- a/links.html
+++ b/links.html
@@ -17,7 +17,7 @@ permalink: /links/
                     <a href="http://www.wired.com/" target="_blank">Wired</a><br>
                     <a href="http://www.engadget.com/" target="_blank">Engadget</a><br>
                     <a href="http://www.gizmodo.com/" target="_blank">Gizmodo</a><br>
-                    <a href="http://http://spectrum.ieee.org/" target="_blank">IEEE Spectrum</a><br>
+                    <a href="http://spectrum.ieee.org/" target="_blank">IEEE Spectrum</a><br>
                     <a href="http://www.technologyreview.com/" target="_blank">Technology Review</a><br>
                     <a href="http://techcrunch.com/" target="_blank">Techcrunch</a><br>
                     <a href="https://news.ycombinator.com/" target="_blank">Hacker News</a><br>
