--- a/category.html
+++ b/category.html
@@ -18,7 +18,7 @@ permalink: /category/
 
                             <li>
                                 <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
-                                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
+                                <p><a href="{{ prepend: site.baseurl }}">{{ post.title }}</a></p>
                                 <em>Posted on {{ post.date | date_to_string }}</em>
                             </li>
                
