--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ permalink: /blog/
     <div class="row">
 
         <!-- BLOG POSTS LIST -->
-        <div class="col-lg-12">
+        <div class="col-lg-8">
 
             {% for post in site.categories['blog'] %}
                 <!-- Blog Post -->
@@ -30,7 +30,7 @@ permalink: /blog/
 
         </div> <!--/col-lg-8 -->
 
-<!--         {% include sidebar.html %} -->
+        {% include sidebar.html %}
 
     </div> <!--/row -->
 </div> <!--/container -->
