--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@ permalink: /about/
 
         <div class="col-lg-6">
             <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
+            <p>This image of me was during my summer 2014 technical internship at Exelis. I was working at the drill press to punch some amazingly precise holes for a circuit that I was helping my mentor assemble.</p>
         </div>
       
         <div class="col-lg-6">
@@ -20,12 +21,16 @@ permalink: /about/
 
             <p>Throughout my years in junior high and high school, I was the go-to-guy for assistance with computer software and hardware problems. Ranging from my family and relatives to my friends, I was person who helped troubleshoot their issues free of charge.</p>
 
-            <p>Enough of my personal history and let me tell you a bit of the purpose of this site. As the first person in my family to go to college, I want to share my experiences and help those who are also the first to attend college. And even if you aren’t the first, I hope that my experience and advice can give you insight towards what you want to do in the future.</p>
+            <p>Enough of my personal history, let me tell you the purpose of this site. As the first person in my family to go to college, I want to share my experiences and help those who are also the first to attend college. And even if you aren’t the first, I hope that my experience and advice can give you insight towards what you want to do in the future.</p>
 
             <p>Although this website will most likely be centered on electrical engineering and computer science, useful links to websites that are rich in content and pieces of work created by me will be posted to help you get started and move along in your career.</p>
 
-            <p>For any information, please contact me by email at: <a href="mailto:dixu@ucsd.edu">dixu@ucsd.edu</a></p>
-            <a href="http://xueyj.github.io/resume.pdf" target="_blank">My Resume</a>
+            <p>If you're wondering what the image is on the Home page, it's the recently invented blue LED by 3 Japanese physicists who won the Nobel Prize in Physics. Red and green LEDs have existed for a long time and blue was the only one that scientists didn't know how to make. As a result, the recent creation of this LED led to the completion of red, blue and green. With this, highly efficient white light can be produced to light up our homes. Why is this important? LEDs are extremely energy efficient because it can convert most of the electricity into light and they last forever (approximately 100,000 hours, to be accurate).</p>
+
+            <p>For further information or if you have any questions, please contact me by email at: <a href="mailto:dixu@ucsd.edu">dixu@ucsd.edu</a></p>
+            <p>While you're at it, check out my <a href="http://xueyj.github.io/resume.pdf" target="_blank">resume</a> here and my GitHub and LinkedIn profile in the footer below.</p>
+
+            <p>Thank you and I hope you enjoy my website!</p>
 
             <p></p>
             <p></p>
