--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ permalink: /about/
 
         <div class="col-lg-6">
             <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
-            <p>This image of me was during my summer 2014 technical internship at Exelis. I was working at the drill press to punch some amazingly precise holes for a circuit that I was helping my mentor assemble.</p>
+            <p>This image of me was during my summer 2014 technical internship at Exelis. I was working at the drill press to punch some amazingly precise holes for a circuit to be sent to the Goldstone Deep Space Network.</p>
         </div>
       
         <div class="col-lg-6">
@@ -28,8 +28,7 @@ permalink: /about/
             <p>If you're wondering what the image is on the Home page, it's the recently invented blue LED by 3 Japanese physicists who won the Nobel Prize in Physics. Red and green LEDs have existed for a long time and blue was the only one that scientists didn't know how to make. As a result, the recent creation of this LED led to the completion of red, blue and green. With this, highly efficient white light can be produced to light up our homes. Why is this important? LEDs are extremely energy efficient because it can convert most of the electricity into light and they last forever (approximately 100,000 hours, to be accurate).</p>
 
             <p>For further information or if you have any questions, please contact me by email at: <a href="mailto:dixu@ucsd.edu">dixu@ucsd.edu</a></p>
-            <p>While you're at it, check out my <a href="http://xueyj.github.io/resume.pdf" target="_blank">resume</a> here and my GitHub and LinkedIn profile in the footer below.</p>
-
+            <p>While you're at it, check out my <a href="http://xueyj.github.io/resume.pdf" target="_blank">resume</a> here and my <a href="http://www.github.com/xueyj" target="_blank">GitHub</a> and <a href="http://www.linkedin.com/in/xuerik/" target="_blank">LinkedIn</a> profiles in the footer below.</p>
             <p>Thank you and I hope you enjoy my website!</p>
 
             <p></p>
