--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ permalink: /
             <div class="col-md-4">
                 <i class="fa fa-flask"></i>
                 <h4>Article Reviews</h4>
-                <p></p>
+                <p>Critique and constructive criticism of technology articles on the web.</p>
                 <p><br/><a href="http://xueyj.github.io/engmentor101/category/#reviews" class="btn btn-theme">More Info</a></p>
             </div>
 
             <div class="col-md-4">
                 <i class="fa fa-trophy"></i>
                 <h4>Career Tips</h4>
-                <p></p>
+                <p>How can I improve my resume? What are the steps needed to get an internship?</p>
                 <p><br/><a href="http://xueyj.github.io/engmentor101/category/#career" class="btn btn-theme">More Info</a></p>
             </div>		 				
 
