--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@ permalink: /links/
              <div class="col-lg-6">
 
                     <h2>Technology News</h2>
-                    <h4>Read about the latest cutting-edge technologies...</h4>
+                    <h4>Read about the latest cutting-edge technologies</h4>
                     <a href="http://www.theverge.com" target="_blank">The Verge</a><br>
                     <a href="http://www.wired.com/" target="_blank">Wired</a><br>
                     <a href="http://www.engadget.com/" target="_blank">Engadget</a><br>
@@ -48,7 +48,7 @@ permalink: /links/
                <div class="col-lg-6">
 
                     <h2>Online Courses (Free!)</h2>
-                    <h4>Ever wanted to take a course without paying?</h4>
+                    <h4>Ever wanted to take a course without paying? Join now!</h4>
                     <a href="https://www.udacity.com/" target="_blank">Udacity</a><br>
                     <a href="https://www.coursera.org/" target="_blank">Coursera</a><br>
 
@@ -56,6 +56,7 @@ permalink: /links/
                     <h4>Prepare for interviews and refine your resume</h4>
                     <a href="http://codingforinterviews.com/" target="_blank">Coding For Interviews</a><br>
                     <a href="http://www.careercup.com/" target="_blank">CareerCup</a><br>
+                    <a href="http://www.glassdoor.com/index.htm" target="_blank">Glassdoor</a><br>
 
                     <br><h2>Programming Practice</h2>
                     <h4>Preparing for a programming competition next month? Practice away!</h4>
