--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ permalink: /
         <div class="row centered">
         
             <div class="col-md-4">
-                <i class="fa fa-heart-o"></i>
+                <i class="fa fa-sort-numeric-asc"></i>
                 <h4>Step-by-step Guides</h4>
                 <p>Find step-by-step guides to engineering projects, tutorials for software and more!</p>
                 <p><br/><a href="http://xueyj.github.io/engmentor101/category/#guides" class="btn btn-theme">More Info</a></p>
             </div>
 
             <div class="col-md-4">
-                <i class="fa fa-flask"></i>
+                <i class="fa fa-pencil-square-o"></i>
                 <h4>Article Reviews</h4>
                 <p>Critique and constructive criticism of technology articles on the web.</p>
                 <p><br/><a href="http://xueyj.github.io/engmentor101/category/#reviews" class="btn btn-theme">More Info</a></p>
