--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@ permalink: /links/
 ---
 
 <div id="linkswrap"></div>
-
+<h3>{% if page.wrap_title %}{{ page.wrap_title }}{% else %}{{ page.title }}{% endif %}</h3>
 <div id="linkstextwrap">
      <div class="container mtb">
          <div class="row">
