--- a/links.html
+++ b/links.html
@@ -4,7 +4,7 @@ title: Links
 permalink: /links/
 ---
 
-<div id="linkswrap"></div>
+<!-- <div id="linkswrap"></div> -->
 
 <div id="linkstextwrap">
      <div class="container mtb">
