--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,11 @@ permalink: /portfolio/
             <h2>These are some of the projects that I have worked on.</h2>
             <br>
             <div class="hline"></div>
+            <div class="col-lg-6">
+            <h2>Technology News</h2>
+            <div class="col-lg-6">
+            <br><h2>Questions and Answers</h2>
+
         </div>
     </div>
 </div><!--/container -->
